--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^6.17.1",
     "@types/node": "^24.7.2",
     "axios": "^1.12.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "mongodb": "^6.20.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.6",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/serve-static": "^1.15.9",
     "prisma": "^6.17.1",
