--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "prisma generate",
+    "start": "ts-node index.ts",
     "dev": "ts-node-dev --respawn --transpile-only index.ts",
     "test:tasks": "ts-node test-tasks.ts",
     "generate": "prisma generate"
@@ -13,22 +15,23 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.17.1",
+    "@types/body-parser": "^1.19.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.21",
     "@types/node": "^24.7.2",
+    "@types/serve-static": "^1.15.9",
     "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "mongodb": "^6.20.0",
     "nodemon": "^3.1.10",
+    "prisma": "^6.17.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.19.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.21",
-    "@types/serve-static": "^1.15.9",
-    "prisma": "^6.17.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3"
+    "ts-node-dev": "^2.0.0"
   }
 }
