Configure for Vercel serverless deployment

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "vercel-build": "prisma generate",
     "postinstall": "prisma generate",
     "build": "prisma generate",
     "start": "ts-node index.ts",
