--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "vercel-build": "npx prisma generate",
     "postinstall": "npx prisma generate",
-    "build": "npx prisma generate",
+    "build": "prisma migrate deploy && prisma generate && tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "start": "ts-node index.ts",
     "dev": "ts-node-dev --respawn --transpile-only index.ts",
     "test:tasks": "ts-node test-tasks.ts",
